--- a/index.html
+++ b/index.html
@@ -47,23 +47,23 @@
     <p>Time to unveil those mysteries, my friend....Let's get back on the horse and ready to be amused and enlightened....Cause, I won't beat around the bush and about to share tidbits with you right out of the box.
         <br>Trust me Fellas, later on you will thank me for the rest of your writing career....</p>
     <h3>1. Title(It's all about tickling their buying bones):</h3>
-    <p>Thats correct. You heard it right? You entice your readers with a crisp and no nonsense "Title". If that's done, there you have accomplished the half of it. How about lengths??? The expert opinion is "65 character". You say whatever you wanna say, but finish it within 65 characters.</p>
+    <p>Thats correct. You heard it right! You entice your readers with a crisp and no nonsense "Title". If that's done, there you have accomplished the half of it. How about lengths??? The expert opinion is "65 character". You say whatever you wanna say, but finish it within 65 characters.</p>
     <h3>2. Subheadings (Those unsung hero's):</h3>
     <p>Subheadings are the hidden cornerstones of your precious article...You categorize your content( at least you try )....Then provide them with appropriate subheadings...</p>
     <h3>3. How long that can be?:</h3>
-    <p>Well, let me be frank with you, Google loves large articles (Ya, there I said it!)....If you ask me, I won't go too far...Why? Cause, I don't want my readers beaten to death with long boring gory details. You better contain your content within 3000 words...Don't be too short (e.g. less then 300 words). It won't hurt if it is 700-800 words long, to be on the safe side.</p>
+    <p>Well, let me be frank with you, Google loves large articles (Ya, there I said it!)....If you ask me, I won't go too far...Why? Cause, I don't want my readers to be beaten to death with long boring gory details. You better contain your content within 3000 words...Don't be too short (e.g. less then 300 words). It won't hurt if it is 700-800 words long, to be on the safe side.</p>
     <h3>4. Content quality:</h3>
     <p>You are creative...So, be it! It goes without saying, quality matters...I can lecture you all day long on that...But, I won't...Cause, I know you can pull this off eventually...Sprinkle humor and rhetoric here and there around your content...It will serve you well...(As it did to me..!!!)</p>
     <div>
         <h3>5. Keywords (Look ma! I found my keys.):</h3>
-        <p>Say "hi" to "Keywords". The key to successful content writing is nothing but choosing the "appropriate" keywords. Of course, It must shed light on Your expressions. It has to be 1-2.5% of your entire text (Experts call it "Keyword Density"). Once you have figured out your keywords, then play with it...juggle your thoughts around 'em....Try to use 'em in the title, headers, sub-headers, main text.... You will find your way, I have no doubt about you!...You can try these tool:</p>
+        <p>Say "Hi" to "Keywords". The key to successful content writing is nothing but choosing the "appropriate" keywords. Of course, It must shed light on your content's main theme. It has to be 1-2.5% of your entire text (Experts call it "Keyword Density"). Once you have figured out your keywords, then play with it...juggle your thoughts around 'em....Try to use 'em in the title, headers, sub-headers, main texts.... You will find your way, I have no doubt about you!...You can try these tools for improving your skills on that:</p>
         <ul>
             <li><a href="https://smallseotools.com/keyword-density-checker/" target="_blank">Keyword Density Checker</a></li>
             <li><a href="https://www.internetmarketingninjas.com/seo-tools/free-optimization/" target="_blank">On Page SEO optimization</a></li>
         </ul>
     </div>
     <h3>6. Optimize your content images (It's all in a days work):</h3>
-    <p>Always put "alt" tag inside the "img" tags...Make sure that Other necessary keywords are in place....Optimize the size of images as much as you can...Your image must have to be relevant with your content...Now a days images are dime a dozen on the Internet...Be cautious and wise in choosing....</p>
+    <p>Always put "alt" tag inside the "img" tags...Make sure that Other necessary keywords are in place....Optimize the size of images as much as you can...Your image must have to be relevant with your content...Now a days, images are dime a dozen on the Internet...Be cautious and wise in choosing....</p>
     <h3>7. Share and care:</h3>
     <p>Sharing is caring, Indeed!...Don't hesitate to share other's quality content with appropriate reference.....And of course, provide options, so that others can do the same with your content...Don't worry, If you scratch others' back, they will do the same for you.</p>
     <div>
@@ -87,13 +87,13 @@
     </div>
     <div>
         <h3>10. Don't plagiarize(Mind your own business):</h3>
-        <p>Yes, don't you ever do that, bugger! It's always easy to take cheap shot. Needless to say, that practice will bite you on the back at some point. At best, you could take a look at others' content, as a part of your learning curve. The following one is a popular online to among writers:</p>
+        <p>Yes, don't you ever do that, bugger! It's always easy to take cheap shot. Needless to say, that practice will bite you on the back at some point. At best, you could take a look at others' content, as a part of your learning curve. The following one is a popular tool among writers:</p>
         <ul>
             <li><a href="https://www.grammarly.com/plagiarism-checker" target="_blank">Plagiarism-Checker</a></li>
         </ul>
     </div>
     <h2>Some non-technical gibberish (if you care!):</h2>
-    <p>You are still here. So there is some more to swallow.</p>
+    <p>You are still here. So there is some more to swallow:</p>
     <h3>11. A writer's cramp:</h3>
     <p>So, you get caught up into the whirlwind of bad patch. Take a spin outside, run some errand and come back. Do sit down, write. You might need a cup full of strong blend coffee. There you are!</p>
     <h3>12. How to slay the Dragon:</h3>
