add your name in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-    <h1>Debunking the mystery of "SEO Friendly" Article. How to write 'em:</h1>
+    <h1>This is Suprokash Chakraborty...</h1>
     <p>My mother always told me that, I am not friendly with the out side world....I agreed.
         <br> These days my clients are saying to me that, I am always friendly with SEO, Guess what!.....I agreed too!!!
         <br>How come, all my articles play along nicely with SEO ???</p>
